--- a/exercise_1.5/style.css
+++ b/exercise_1.5/style.css
@@ -130,6 +130,22 @@ margin-bottom: 100px;
     
  }
 
+ .btn8{
+    display:absolute; 
+    align-items: center;
+    justify-content: center;
+ background-size:contain;
+ background-image:url(images/garden.jpg);
+ background-repeat:no-repeat;s
+ width: 50vw; 
+ height:50vh;
+ padding:100px; 
+ margin-top: auto;
+ background-position: center; 
+ margin-bottom: 100px;
+    
+ }
+
     .div2 { grid-area: 1 / 2 / 2 / 3; margin-top: 200px;
     margin-bottom: auto;
 margin-right:auto;
