--- a/exercise_1.5/style.css
+++ b/exercise_1.5/style.css
@@ -136,7 +136,7 @@ margin-bottom: 100px;
     justify-content: center;
  background-size:contain;
  background-image:url(images/garden.jpg);
- background-repeat:no-repeat;s
+ background-repeat:no-repeat;
  width: 50vw; 
  height:50vh;
  padding:100px; 
@@ -179,7 +179,7 @@ margin-left:auto}
     margin-right:auto;
     margin-left:auto }
 
-    .div8 { grid-area: 3 / 2 / 4 / 3;argin-top: 200px;
+    .div8 { grid-area: 3 / 2 / 4 / 3;margin-top: 200px;
         margin-bottom: auto;
     margin-right:auto;
     margin-left:auto}
